Committed by v2rayse.com

--- a/proxy/Sing-box.yaml
+++ b/proxy/Sing-box.yaml
@@ -104,25 +104,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -139,25 +139,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ],
       "url": "https://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -178,25 +178,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -213,25 +213,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -248,25 +248,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -283,25 +283,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -318,25 +318,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -354,25 +354,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -390,25 +390,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -426,25 +426,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -462,25 +462,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -505,25 +505,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -541,25 +541,25 @@
         "TG频道:@hkaa0▓美国_4",
         "TG频道:@hkaa0▓加拿大_2",
         "TG频道:@hkaa0▓中国_2",
-        "TG频道:@hkaa0▓韩国",
         "TG频道:@hkaa0▓美国_5",
         "TG频道:@hkaa0▓美国_6",
-        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓美国_7",
         "TG频道:@hkaa0▓美国_8",
+        "TG频道:@hkaa0▓中国_3",
         "TG频道:@hkaa0▓中国_4",
-        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_9",
         "TG频道:@hkaa0▓荷兰",
         "TG频道:@hkaa0▓阿联酋",
-        "TG频道:@hkaa0▓中国_6",
+        "TG频道:@hkaa0▓中国_5",
         "TG频道:@hkaa0▓美国_10",
         "TG频道:@hkaa0▓美国_11",
         "TG频道:@hkaa0▓美国_12",
-        "TG频道:@hkaa0▓美国_13",
         "TG频道:@hkaa0▓加拿大_3",
         "TG频道:@hkaa0▓德意志联邦共和国_3",
-        "TG频道:@hkaa0▓俄罗斯联邦"
+        "TG频道:@hkaa0▓英国",
+        "TG频道:@hkaa0▓美国_13",
+        "TG频道:@hkaa0▓美国_14",
+        "TG频道:@hkaa0▓美国_15"
       ]
     },
     {
@@ -747,16 +747,6 @@
       "type": "shadowsocks"
     },
     {
-      "server": "103.214.68.57",
-      "server_port": 10001,
-      "uuid": "ebca5f68-bf59-4081-e658-f158839c2f5c",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓韩国",
-      "type": "vmess"
-    },
-    {
       "server": "admin.arzonhost.ir",
       "server_port": 2086,
       "transport": {
@@ -786,22 +776,6 @@
       "security": "auto",
       "alter_id": 0,
       "tag": "TG频道:@hkaa0▓美国_6",
-      "type": "vmess"
-    },
-    {
-      "server": "free-relay.themars.top",
-      "server_port": 32202,
-      "transport": {
-        "path": "/cctv1.m3u8",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "d660d002-6bfc-4a6d-9e91-31e3b9f7b5ff",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓中国_3",
       "type": "vmess"
     },
     {
@@ -849,7 +823,7 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓中国_4",
+      "tag": "TG频道:@hkaa0▓中国_3",
       "type": "vmess"
     },
     {
@@ -865,7 +839,7 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓中国_5",
+      "tag": "TG频道:@hkaa0▓中国_4",
       "type": "vmess"
     },
     {
@@ -929,23 +903,7 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓中国_6",
-      "type": "vmess"
-    },
-    {
-      "server": "tu.mahilu.site",
-      "server_port": 2095,
-      "transport": {
-        "path": "/",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "7a737f41-b792-4260-94ff-3d864da67b80",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓美国_10",
+      "tag": "TG频道:@hkaa0▓中国_5",
       "type": "vmess"
     },
     {
@@ -961,7 +919,7 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓美国_11",
+      "tag": "TG频道:@hkaa0▓美国_10",
       "type": "vmess"
     },
     {
@@ -980,7 +938,7 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓美国_12",
+      "tag": "TG频道:@hkaa0▓美国_11",
       "type": "vmess"
     },
     {
@@ -996,7 +954,7 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG频道:@hkaa0▓美国_13",
+      "tag": "TG频道:@hkaa0▓美国_12",
       "type": "vmess"
     },
     {
@@ -1038,12 +996,64 @@
       "type": "vmess"
     },
     {
-      "server": "92.118.112.183",
-      "server_port": 32133,
-      "password": "nD4YTQSFac03lzQis3L72U",
-      "method": "chacha20-ietf-poly1305",
-      "tag": "TG频道:@hkaa0▓俄罗斯联邦",
-      "type": "shadowsocks"
+      "server": "uk01.freeflyingcloud.xyz",
+      "server_port": 22252,
+      "tls": {
+        "enabled": true,
+        "server_name": "uk01.freeflyingcloud.xyz",
+        "insecure": true
+      },
+      "password": "4f10e74d-51cb-472a-8c2d-0ee36ccf0ff3",
+      "tag": "TG频道:@hkaa0▓英国",
+      "type": "trojan"
+    },
+    {
+      "server": "104.19.40.222",
+      "server_port": 8880,
+      "transport": {
+        "path": "/d/65dd503.TG.WangCai2.WangCai_8:107690",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "57e0cb4d-eae5-48ec-8091-149dc2b309e0",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG频道:@hkaa0▓美国_13",
+      "type": "vmess"
+    },
+    {
+      "server": "104.19.40.228",
+      "server_port": 8880,
+      "transport": {
+        "path": "/d/65dd503.TG.WangCai2.WangCai_8:107690",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "57e0cb4d-eae5-48ec-8091-149dc2b309e0",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG频道:@hkaa0▓美国_14",
+      "type": "vmess"
+    },
+    {
+      "server": "104.19.40.211",
+      "server_port": 8880,
+      "transport": {
+        "path": "/d/65dd503.TG.WangCai2.WangCai_8:107690",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "57e0cb4d-eae5-48ec-8091-149dc2b309e0",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG频道:@hkaa0▓美国_15",
+      "type": "vmess"
     }
   ],
   "route": {
