--- a/proxy/clash.yaml
+++ b/proxy/clash.yaml
@@ -1,7 +1,7 @@
 ####################################
-# 创建者：五叶小铺 https://hkaa0.shop/
+# 创建者：v2rayse.com
 # 客户端：Clash
-# 创建时间：2024-04-20 21:24:15
+# 创建时间：2024-04-21 04:20:08
 # 使用模版：V2RaySE 默认模版
 # 节点数量：29
 ####################################
